rename tables, add controller method, fix migration